@@ -31,7 +31,7 @@ public class MD5 extends BaseFunction {
   public Object apply(List<Object> args) {
     assertArgs(args, 1, "(input)");
 
-    var input = args.get(0);
+    var input = args.getFirst();
     if (input == null) return null;
 
     try {
